--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,31 +1,8 @@
-<body>
-    <nav class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-bottom">
-        <div class="container-fluid">
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <i class="bi bi-house-door"></i> <!-- Home Icon -->
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <i class="bi bi-folder"></i> <!-- Folder Icon -->
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <i class="bi bi-plus-circle"></i> <!-- Add Icon -->
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <i class="bi bi-chat-dots"></i> <!-- Chat Icon -->
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <img src="https://cdn-icons-png.flaticon.com/512/10275/10275824.png" class="avatar" alt="User Avatar">
-                </li>
-            </ul>
-        </div>
-    </nav>
-</body>
+<div class="navbar">
+  <a href="#home" class="active"><i class="fa-solid fa-house"></i></a>
+  <a href="#Documents"><i class="fa-solid fa-file-circle-plus"></i></a>
+  <a href="#Add"><i class="fa-solid fa-plus"></i></a>
+  <a href="#Chat"><i class="fa-brands fa-rocketchat"></i></a>
+  <a href="#Profil"><i class="fa-solid fa-user"></i></a>
+
+</div>
