--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -8,5 +8,7 @@
     <p>Date: <%= document.date %></p>
     <p>Deadline: <%= document.deadline %></p>
     <p>Comment: <%= document.comment %></p>
+    <p>User: <%= document.user.username %></p>
+    <p>Group: <%= document.group.title %></p>
   </div>
 <% end %>
