--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,16 +7,41 @@ body {
   min-height: 100vh;
 }
 .container {
-  width: 90%;
+  width: 100%;
   max-width: 600px;
   margin: 20px auto;
   border-radius: 25px;
   padding: 20px;
-  padding-top: 80px; /* Add padding-top to compensate for the navbar height */
-  background-color: rgba(255, 255, 255, 0.439); /* Adjust background color and opacity */
+  padding-top: 80px;
+  background-color: rgba(255, 255, 255, 0.439);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
-  text-align: center; /* Center the text inside the container */
+  text-align: center;
+}
+
+#createGroupSection {
+  position: fixed;
+  bottom: 100px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  max-height: 40%;
+  overflow-y: auto;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  display: none;
+}
+
+
+.image {
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9999;
 }
 
 
@@ -59,8 +84,7 @@ input[type="submit"] {
   border-radius: 15px;
   background-color: #954caf;
   color: white;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+
 }
 
 input[type="submit"]:hover {
@@ -68,14 +92,9 @@ input[type="submit"]:hover {
   font-size: larger;
 }
 
-#error_explanation {
-  color: red;
-  margin-bottom: 15px;
-}
+.icon-button i {
+  font-size: 50px;
+  color: #954caf;
+  position:relative
 
-#error_list {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  font-size: 0.9em;
 }
