--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,36 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create a Group</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
-    <img class="w3-image" src="https://img.freepik.com/premium-vector/cloud-file-server-data-transfer-concept-3d-cute-icon-yellow-folder-with-page-document_22052-4074.jpg" alt="" width="400" height="400">
-  <div class="w3-display-bottomleft w3-padding-large w3-opacity">
-  </div>
 </head>
 
 <body>
-        <a  class="icon-button" onclick="toggleSection('createGroupSection')"><i class="fa-solid fa-people-group"></i></a>
+  <div>
+    <%= image_tag "home-image.png", alt: "DocFlow", width: 440, height: 300, class:"image"%>
+  </div>
+
+  <div class= menu_create>
+    <a href="#createGroupSection" class="icon-button" onclick="toggleSection('createGroupSection')"><i class="fa-solid fa-person-circle-plus"></i></a>
 
         <div id="createGroupSection">
+                <h2>Create Group</h2>
+
             <form action="/submit-group" method="POST" enctype="multipart/form-data">
-                <div class="field">
-                    <label for="document_id">Document ID:</label>
-                    <input type="text" id="document_id" name="document_id" required>
-                </div>
 
                 <div class="field">
-                    <label for="title">Title:</label>
+                    <label for="title">Title</label>
                     <input type="text" id="title" name="title" required>
                 </div>
 
                 <div class="field">
-                    <label for="category">Category:</label>
+                    <label for="category">Category</label>
                     <input type="text" id="category" name="category" required>
                 </div>
 
                 <div class="actions">
-                    <input type="submit" value="Create Group">
+                    <input type="submit" value="Done">
                 </div>
             </form>
 
@@ -44,63 +43,7 @@
             section.style.display = section.style.display === 'none' ? 'block' : 'none';
         }
     </script>
+  </div>
 
-
-        <a  class="icon-button" onclick="toggleSection('addDocumentSection')"><i class="fa-solid fa-file-circle-plus"></i></a>
-
-        <div id="addDocumentSection" style="display: none;">
-            <form action="/submit-document" method="POST" enctype="multipart/form-data">
-                <div id="error_explanation">
-                    <ul id="error_list"></ul>
-                </div>
-
-                <div class="field">
-                    <label for="title">Title:</label>
-                    <input type="text" id="title" name="title" required>
-                </div>
-
-                <div class="field">
-                    <label for="user_id">User ID:</label>
-                    <input type="text" id="user_id" name="user_id" required>
-                </div>
-
-                <div class="field">
-                    <label for="category">Category:</label>
-                    <input type="text" id="category" name="category" required>
-                </div>
-
-                <div class="field">
-                    <label for="date">Date:</label>
-                    <input type="date" id="date" name="date" required>
-                </div>
-
-                <div class="field">
-                    <label for="deadline">Deadline:</label>
-                    <input type="date" id="deadline" name="deadline" required>
-                </div>
-
-                <div class="field">
-                    <label for="comment">Comment:</label>
-                    <input type="text" id="comment" name="comment" required>
-                </div>
-
-                <div class="field">
-                    <label for="photo">Upload Photo:</label>
-                    <input type="file" id="photo" name="photo" accept="image/*" required>
-                </div>
-
-                <div class="actions">
-                    <input type="submit" value="Add Document">
-                </div>
-            </form>
-
-        </div>
-
-    <script>
-        function toggleSection(sectionId) {
-            const section = document.getElementById(sectionId);
-            section.style.display = section.style.display === 'none' ? 'block' : 'none';
-        }
-    </script>
 </body>
 </html>
