--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -1,9 +1,10 @@
 <h1>Document Detail</h1>
 <div>
+<div class="avatar"
+  style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @document.photo.key, height: 300, crop: :fill %>')">
+</div>
   <h3><%= @document.title %></h3>
   <p>Category: <%= @document.category %></p>
-  <p>Date: <%= @document.date %></p>
-  <p>Deadline: <%= @document.deadline %></p>
   <p>Comment: <%= @document.comment %></p>
   <p>User: <%= @document.user.username %></p>
   <p>Group: <%= @document.group.title %></p>
