--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,8 +1,19 @@
-<h1>Group Detail</h1>
-<div>
-  <h3><%= @group.title %></h3>
-  <p>Category: <%= @group.category %></p>
+<h1><%= @group.title %></h1>
+
+<div class="messages">
+  <% @messages.each do |message| %>
+    <div class="message">
+      <strong><%= message.user.username %>:</strong>
+      <%= message.content %>
+    </div>
+  <% end %>
 </div>
-<%= link_to 'Edit', edit_group_path(@group) %> |
-<%= link_to 'Back', groups_path %>
+
+<%= form_with(model: [@group, @message], local: true) do |f| %>
+  <div class="form-group">
+    <%= f.label :content %>
+    <%= f.text_area :content, class: "form-control" %>
+  </div>
+  <%= f.submit "Send", class: "btn btn-primary" %>
+<% end %>
 
