--- a/app/views/documents/new.html.erb
+++ b/app/views/documents/new.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(document) do |f| %>
+<%= simple_form_for(group, document) do |f| %>
   <%= f.input :photo, as: :file %>
   <%= f.input :comment %>
   <%= f.input :category%>
