--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -1,14 +1,25 @@
 <!-- app/views/documents/index.html.erb -->
-
 <h1>Documents</h1>
-<% @documents.each do |document| %>
-  <div>
-    <h3><%= link_to document.title, document_path(document) %></h3>
-    <p>Category: <%= document.category %></p>
-    <p>Date: <%= document.date %></p>
-    <p>Deadline: <%= document.deadline %></p>
-    <p>Comment: <%= document.comment %></p>
-    <p>User: <%= document.user.username %></p>
-    <p>Group: <%= document.group.title %></p>
-  </div>
-<% end %>
+
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Category</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @documents.each do |document| %>
+      <tr>
+        <td><%= document.title %></td>
+        <td><%= document.category %></td>
+        <td>
+          <%= link_to 'Show', group_document_path(document.group, document) %>
+          <%= link_to 'Delete', document_path(document), method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
