--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,34 +1,40 @@
-
-
+<!-- app/views/shared/_navbar.html.erb -->
 <div class="navbar">
-  <a href="#home" class="active"><i class="fa-solid fa-house"></i></a>
-  <a href="#Documents"><i class="fa-regular fa-folder-open"></i></a>
+  <%= link_to root_path, class: 'active' do %>
+    <i class="fa-solid fa-house"></i>
+  <% end %>
 
+  <%= link_to documents_path do %>
+    <i class="fa-regular fa-folder-open"></i>
+  <% end %>
 
-
-  <a href="#Add" class="icon-button" onclick="toggleSection('addDocumentSection')"><i class="fa-solid fa-plus"></i></a>
+  <a href="#Add" class="icon-button" onclick="toggleSection('addDocumentSection')">
+    <i class="fa-solid fa-plus"></i>
+  </a>
 
   <div id="addDocumentSection" class="popup-container">
     <h2>Add Document</h2>
-      <%= simple_form_for Document.new do |f| %>
-        <%= f.input :photo, as: :file %>
-        <%= f.input :title %>
-        <%= f.input :category %>
-        <%= f.input :comment %>
-        <%= f.association :group %>
-        <%= f.button :submit %>
-      <% end %>
-          </div>
+    <%= simple_form_for Document.new do |f| %>
+      <%= f.input :photo, as: :file %>
+      <%= f.input :title %>
+      <%= f.input :category %>
+      <%= f.input :comment %>
+      <%= f.association :group %>
+      <%= f.button :submit %>
+    <% end %>
+  </div>
 
-          <script>
-              function toggleSection(sectionId) {
-                  const section = document.getElementById(sectionId);
-                  section.style.display = section.style.display === 'none' ? 'block' : 'none';
-              }
-          </script>
+ 
 
+  <%= link_to messages_path do %>
+    <i class="fa-regular fa-comment"></i>
+  <% end %>
 
-  <a href="#Chat"><i class="fa-regular fa-comment"></i></a>
-  <a href="#Profil"><i class="fa-regular fa-user"></i></a>
-
+  <% if user_signed_in? %>
+    <%= link_to user_path(current_user) do %>
+      <i class="fa-regular fa-user"></i>
+    <% end %>
+  <% else %>
+    <%= link_to 'Login', new_user_session_path %>
+  <% end %>
 </div>
