--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,8 @@
-<h1>User Detail</h1>
-<div>
-  <h3><%= @user.username %></h3>
-  <p>Email: <%= @user.email %></p>
-  <p>Created at: <%= @user.created_at %></p>
-  <p>Updated at: <%= @user.updated_at %></p>
-</div>
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<!-- app/views/users/show.html.erb -->
+<h1>Profile</h1>
+
+<p>Name: <%= @user.name %></p>
+<p>Email: <%= @user.email %></p>
+
+<%= link_to 'Edit Profile', edit_user_path(@user), class: 'btn btn-primary' %>
+
