--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,29 +1,34 @@
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+<h1>Members</h1>
+<% @group.users.each do |user| %>
+  <div class="member">
+    <% if user.photo.attached? %>
+      <%= image_tag url_for(user.photo), class: "avatar", alt: "avatar" %>
+    <% end %>
+    <p><%= user.username %></p>
+  </div>
+<% end %>
+
+<!-- Bouton pour lancer le modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
   Launch demo modal
 </button>
+
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
       </div>
       <div class="modal-body">
-        <p>Modal body text goes here.</p>
+        <p>salut</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
 </div>
-<h1>Members</h1>
-<% @group.users.each do |user| %>
-  <div class="member">
-    <% if user.photo.attached? %>
-      <%= cl_image_tag user.photo.key, class: "avatar", alt: "avatar" %>
-    <% end %>
-    <p><%= user.username %></p>
-  </div>
-<% end %>
