--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -1,25 +1,28 @@
-<!-- app/views/documents/index.html.erb -->
-<h1>Documents</h1>
+<h1<h1 class="text-center my-4">Documents</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Category</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @documents.each do |document| %>
+<div class="container">
+  <table class="table table-striped table-bordered">
+    <thead class="thead-dark">
       <tr>
-        <td><%= document.title %></td>
-        <td><%= document.category %></td>
-        <td>
-          <%= link_to 'Show', group_document_path(document.group, document) %>
-          <%= link_to 'Delete', document_path(document), method: :delete, data: { confirm: 'Are you sure?' } %>
-        </td>
+        <th scope="col">Title</th>
+        <th scope="col">Category</th>
+        <th scope="col">Actions</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @documents.each do |document| %>
+        <tr>
+          <td><%= document.title %></td>
+          <td><%= document.category %></td>
+          <td>
+            <%= link_to 'Show', group_document_path(document.group, document), class: 'btn btn-primary btn-sm' %>
+            <%= form_with(model: document, method: :delete, local: true, style: 'display:inline-block;') do %>
+            <%= submit_tag 'Delete', data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-sm' %>
 
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
