--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -29,9 +29,9 @@ body {
   overflow-y: auto;
   background-color: rgba(255, 255, 255, 0.9);
   border-radius: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
   display: none;
+
 }
 
 
@@ -42,14 +42,7 @@ body {
   left: 0;
   width: 100%;
   z-index: 9999;
-}
-
-
-h1 {
-  text-align: center;
-  font-size: 1.5em;
-  margin-bottom: 20px;
-  cursor: pointer;
+  margin-bottom: 5mm;
 }
 
 form {
@@ -94,7 +87,7 @@ input[type="submit"]:hover {
 
 .icon-button i {
   font-size: 50px;
-  color: #954caf;
-  position:relative
+  color: #6ba4cd;
+  position:relative;
 
 }
