--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -8,25 +8,38 @@
   </div>
 <% end %>
 
-<!-- Bouton pour lancer le modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-  Launch demo modal
+
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Add members
 </button>
 
+<!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <p>salut</p>
+        <%= simple_form_for :test, url: group_user_groups_path(@group) do |f|  %>
+        <% end %>
+        <form action="<%= group_user_groups_path(@group) %>" method="post" class="form-example">
+          <div class="form-example">
+          <% @users.each do |user| %>
+            <div>
+              <input type="checkbox" id="user_<%= user.id %>" name="user_id[]" value="<%= user.id %>" />
+              <label for="user_<%= user.id %>"><%= user.username %></label>
+            </div>
+          <% end %>
+          </div>
+          <div class="form-example">
+            <input type="submit" value="Subscribe!" />
+          </div>
+        </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
