--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -1,28 +1,37 @@
-<h1<h1 class="text-center my-4">Documents</h1>
+<!-- app/views/documents/index.html.erb -->
+<h1 class="text-center my-4">Documents</h1>
 
 <div class="container">
-  <table class="table table-striped table-bordered">
-    <thead class="thead-dark">
-      <tr>
-        <th scope="col">Title</th>
-        <th scope="col">Category</th>
-        <th scope="col">Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @documents.each do |document| %>
-        <tr>
-          <td><%= document.title %></td>
-          <td><%= document.category %></td>
-          <td>
-            <%= link_to 'Show', group_document_path(document.group, document), class: 'btn btn-primary btn-sm' %>
-            <%= form_with(model: document, method: :delete, local: true, style: 'display:inline-block;') do %>
-            <%= submit_tag 'Delete', data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-sm' %>
-
-            <% end %>
-          </td>
-        </tr>
+  <div class="row mb-4">
+    <div class="col-12 text-right">
+      <% if Group.any? %>
+        <% first_group = Group.first %>
       <% end %>
-    </tbody>
-  </table>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <table class="table table-striped table-bordered">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">Title</th>
+            <th scope="col">Category</th>
+            <th scope="col">Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @documents.each do |document| %>
+            <tr>
+              <td><%= document.title %></td>
+              <td><%= document.category %></td>
+              <td class="d-flex justify-content-around">
+                <%= link_to 'Show', group_document_path(document.group, document), class: 'btn btn-primary btn-sm' %>
+                <%= button_to 'Delete', document_path(document), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-sm', form: { 'data-turbo': 'false' } %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
