--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -1,33 +1,20 @@
-<h1>Document Detail</h1>
-<div>
+<!-- app/views/documents/show.html.erb -->
+<h1 class="my-4">Document Detail</h1>
+<div class="container">
   <% if @document.photo.present? && @document.photo.key.present? %>
-    <div class="h-40"
-      style="
-        background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path(@document.photo.key, height: 300, crop: :fill) %>');
-        height: 20vh">
+    <div class="h-40 mb-4" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path(@document.photo.key, height: 300, crop: :fill) %>'); height: 20vh;">
     </div>
   <% else %>
-    <div class="h-40"
-      style="
-        background-color: grey;
-        height: 20vh">
-      <p>No photo available</p>
+    <div class="h-40 mb-4 d-flex align-items-center justify-content-center" style="background-color: grey; height: 20vh;">
+      <p class="text-center text-white">No photo available</p>
     </div>
   <% end %>
   <h3><%= @document.title %></h3>
-  <p>Category: <%= @document.category %></p>
-  <p>Comment: <%= @document.comment %></p>
-  <p>User: <%= @document.user.username %></p>
-  <p>Group: <%= @document.group.title %></p>
+  <p><strong>Category:</strong> <%= @document.category %></p>
+  <p><strong>Comment:</strong> <%= @document.comment %></p>
+  <p><strong>User:</strong> <%= @document.user.username %></p>
+  <p><strong>Group:</strong> <%= @document.group.title %></p>
+
+  <%= link_to 'Back', documents_path, class: 'btn btn-secondary mt-3' %>
 </div>
-
-
-<% if @document.assignements.any? %>
-    <% @document.assignements.each do |assignement| %>
-        Assigned to: <%= assignement.user.username %> - Comment: <%= assignement.comment %>
-    <% end %>
-<% end %>
-
-<%= link_to 'Back', documents_path, class: "btn btn-secondary" %>
-<%= link_to 'Assign this document', new_document_assignement_path(@document), class: "btn btn-primary" %>
 
