--- a/app/views/assignements/index.html.erb
+++ b/app/views/assignements/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Assignments</h1>
+<h1>Assignements</h1>
 <% @assignements.each do |assignement| %>
   <div>
     <h3><%= link_to "Assignment ##{assignement.id}", document_assignement_path(assignement.document, assignement) %></h3>
