--- a/app/views/assignements/show.html.erb
+++ b/app/views/assignements/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Assignment Detail</h1>
+<h1>Assignement Detail</h1>
 <div>
   <h3>Assignment ##<%= @assignement.id %></h3>
   <p>User: <%= @assignement.user.username %></p>
