--- a/app/views/assignements/new.html.erb
+++ b/app/views/assignements/new.html.erb
@@ -1,9 +1,9 @@
-<h1>New Assignment</h1>
+<h1>New Assignement</h1>
 
-<%= form_with(model: [@document, @assignment], local: true) do |form| %>
-  <% if @assignment.errors.any? %>
+<%= form_with(model: [@document, @assignement], local: true) do |form| %>
+  <% if @assignement.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@assignment.errors.count, "error") %> prohibited this assignment from being saved:</h2>
+      <h2><%= pluralize(@assignement.errors.count, "error") %> prohibited this assignement from being saved:</h2>
 
       <ul>
       <% @assignment.errors.full_messages.each do |message| %>
