--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -12,9 +12,7 @@
   <% end %>
 </div>
 
-
-
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+<button type="button" class="button-34" data-bs-toggle="modal" data-bs-target="#exampleModal">
   Add members
 </button>
 
