--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Users</h1>
 <% @users.each do |user| %>
   <div>
-    <h3><%= link_to user.username, user_path(user) %></h3>
+    <h3><%= link_to user.username %></h3>
     <p>Email: <%= user.email %></p>
     <p>Created at: <%= user.created_at %></p>
     <p>Updated at: <%= user.updated_at %></p>
